为了debug，将agile_autonomy从simulation摘出来

--- a/data_generation/agile_autonomy/CMakeLists.txt
+++ b/data_generation/agile_autonomy/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(agile_autonomy)
 
+SET(CMAKE_BUILD_TYPE Debug)
+
 ## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++17)
 add_compile_options(-O3)
