test_trajectories.py 调试

--- a/planner_learning/config/train_settings.yaml
+++ b/planner_learning/config/train_settings.yaml
@@ -24,8 +24,8 @@ train:
   top_trajectories: 3
   summary_freq: 400
   data_save_freq: 15
-  train_dir: "data/train"
-  val_dir: "data/val"
+  train_dir: "/home/jarvis/sda2/data/agile_autonomy/data/train_all_7ms/train"
+  val_dir: "/home/jarvis/sda2/data/agile_autonomy/data/train_all_7ms/test"
   log_images: False
   save_every_n_epochs: 5
   ref_frame: 'bf'
